--- a/src/scss/_mainPage.scss
+++ b/src/scss/_mainPage.scss
@@ -113,3 +113,10 @@
 
   z-index: 10;
 }
+
+@media (max-width: 640px){
+  .jumbotron{
+    width: 100%;
+    height: 600px;
+  }
+}
